Floating Layout support and removing session from href

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -51,6 +51,7 @@
 	[toolbarDisplayTimer]="displayTimer"
 	[toolbarDisplayLogoValue]="logo"
 	[floatingLayout]="floatingLayout"
+	[floatingLayoutType]="layoutNumber"
 >
 </ov-videoconference>
 
