Floating Layout support and removing session from href

--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.css
@@ -51,10 +51,12 @@
 }
 
 #layout-container {
-	height: calc(100% - 40px);
+	height: inherit;
 	width: inherit;
 }
-
+#layout-container.empty-ticker {
+	height: calc(100% - 40px); /* Height when displayTickerValue is blank */
+}
 .mat-drawer-container {
 	background-color: var(--ov-primary-color);
 }
