--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.html
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.html
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="layout-container" #layoutContainer>
+			<div id="layout-container" #layoutContainer [ngClass]="{ 'empty-ticker': displayTickerValue }">
 				<ng-container *ngTemplateOutlet="layoutTemplate"></ng-container>
 			</div>
 		</mat-sidenav-content>
